--- a/code/aboutme.css
+++ b/code/aboutme.css
@@ -2,25 +2,33 @@ body {
     background-color: rgb(208, 208, 219);
 }
 .topnav {
-    padding: 12px;
     text-align: center;
     position: fixed;
     top: 0;
     width: 100%;
     background-color: black;
     color: white;
-    margin: 5px; 
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    z-index: 2; 
 }
+.topnav :visited{
+    color: blue;
+} 
 
 .font {
     font-family: 'Squada One', cursive;
     text-decoration: underline;
-    margin-top: 60px; 
+    margin-top: 40px;
+ 
 }
 
 .font2 {
     font-family: 'Roboto Mono', monospace;
 }
 
+.image {
+    position: relative; 
+    text-align: center;
+    border: 10px solid #000000;
+}
