--- a/code/index.css
+++ b/code/index.css
@@ -1,11 +1,13 @@
-
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
 
 
 body {
     background-color: rgb(208, 208, 219);
 }
+selector:pseudo-class {
+    property: value;
+  }
 .topnav {
-    padding: 12px;
     text-align: center;
     position: fixed;
     top: 0;
@@ -15,14 +17,18 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif
 }
+.topnav :visited{
+    color: blue;
+} 
 
 .sectionheading {
-    color: lightslategray;
+ 
     text-align: left; 
 }
 
 #wedding {
     width: 100%;
+    border: 10px solid #000000;
     
 }
 
@@ -33,6 +39,7 @@ body {
 
 #basketball {
     width: 100%; 
+    border: 10px solid #000000;
 }
 .homepage {
     flex-basis: 50%; 
@@ -46,3 +53,4 @@ body {
 .font2 {
     font-family: 'Roboto Mono', monospace;
 }
+
