--- a/code/css/index.css
+++ b/code/css/index.css
@@ -1,174 +1,87 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
-
-/* For Mobile  */
 body {
     background-color: rgb(208, 208, 219);
 }
-selector:pseudo-class {
-    property: value;
-  }
-.topnav {
+
+.flexbox1 {
+    display: block; 
     text-align: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    z-index: 2;
 }
-.topnav :visited{
-    color: blue;
-} 
-
-.sectionheading {
-   margin-top: 5px;
-}
-
-#wedding {
-    width: 93.3%;
-    border: 10px solid #000000;  
-    margin-top: -10px; 
-}
-
-.flexbox {
-    display: flex; 
-    justify-content: space-evenly;
-}
-
-#basketball {
-    width: 86%; 
-    border: 10px solid #000000;
-
-}
-.homepage {
-    flex-basis: 50%; 
-}
-
-.font {
+.robbiecolborne {
+    font-size: 42px;
+    margin: 7%;
+    text-align: left;
     font-family: 'Squada One', cursive;
-    text-decoration: underline;
-    font-size: 17px; 
-    margin-top: -2px;
-    text-align: center; 
 }
 
-.font2 {
+.robbiecolborne1 {
+    font-size: 42px;
+    margin: 7%;
+    text-align: right;
+    font-family: 'Squada One', cursive;
+  
+}
+
+.middle {
+    text-align: center;
+    font-size: 30px; 
     font-family: 'Roboto Mono', monospace;
-    font-size: 12px;
-    margin-top: -5px; 
+  
 }
 
-.footer {
+.texting {
     text-align: center;
-    padding-top: 30px;
-
+    font-size: 25px;
+    font-family: 'Roboto Mono', monospace;
 }
 
-#welcomeheading {
-    font-size: 20px; 
-    font-family: 'Squada One', cursive;
-    border: 8px solid #000000;
-    border-radius: 15px 15px 15px 15px;   
-    margin: 8% 34% 3%;
-    text-align: center;
+@keyframes flicker-o {
+    10% { color: rgba(255, 255, 0, 0.776); }
+    30% { color: rgba(0, 0, 0, 0.776); }
+    50% { color: rgba(255, 255, 0, 0.776); }
+    80% { color: rgba(0, 0, 0, 0.776); }
+    100% { color: rgba(255, 255, 0, 0.776); }
+}
+
+.animation1 {
     position: relative;
+    /* top: 20%; */
+    /* width: 10%; */
+    margin: 0;
+    color: yellow; 
+    text-shadow: 0 0 20px red; 
+    animation: flicker-o linear infinite 5s; 
 }
 
-#codephoto {
-    text-align: center;
+.animation1:after {
+    content: attr(data-text);
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    /* padding: 0 20px;  */
+    /* z-index: -1;  */
+    color: pink; 
+    filter: blue(15px); 
 }
 
-.sectionheadinglastp {
-    text-align: center;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 12px;
+.animation1:before {
+    content: '';
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* background: red; */
+    /* z-index: -2;  */
+    opacity: 1; 
+    filter: blur(40px);
 }
 
-.hide-small {
-    display: none; 
-}
-
-.hide-large {
-    display: initial; 
-}
-
-.hidden {
-    display: initial;
-}
-.hidden1 {
-    display: none;
-}
-/* For Larger Screens   */
-
-@media only screen and (min-width: 600px) {
-
-    .font {
-      font-size: 16px; 
-    }
-
-    .font2 {
-        font-size: 14px;
-    }
-
-    #welcomeheading {
-        font-size: 35px;
-        margin: 4% 34% 2%;
-    }
-
-    .hide-small {
-        display: initial;
-    }
-
-    .hide-large {
-        display: none;
-    }
-
-    .wedding {
-        width: 94.3%;
-    }
-    .bigflex {
-        text-align: center;
-    }
-
-}
-
-@media only screen and (min-width: 900px) {
-    .font {
-        font-size: 20px;
-        padding-top: 65px; 
-        margin-right: 5px;
-    }
-
-    .font2 {
-        font-size: 18px; 
-        padding-top: 25px; 
-        margin-right: 5px;
-        text-align: left;
-        padding-left: 10px;
-    }
-
-    #wedding {
-        width: 94.5%; 
-    }
-
-    .bigflex {
+@media only screen and (min-width: 800px) {
+    .flexbox1 {
+        display: block; 
         display: flex;
-        flex-direction: row-reverse;
-    }
-    #codephoto {
-        width: 50%;
+        justify-content: center;
     }
 
-    .hidden {
-        display: none;
     }
 
-    .hidden1 {
-        display: initial;
-    }
-
-
-
-}
