--- a/code/css/contactme.css
+++ b/code/css/contactme.css
@@ -2,6 +2,11 @@
 body {
     background-color: rgb(208, 208, 219);
 }
+
+.break {
+    text-align: center;
+}
+
 .topnav {
     
     text-align: center;
@@ -41,4 +46,41 @@ body {
     border-radius: 35px 35px 35px 35px;
     margin: 8% 35% 2%;
     text-align: center;
+}
+
+.texter {
+    font-family: 'Squada One', cursive;
+    font-size: 23px;
+}
+
+.border {
+    border: black 10px solid;
+}
+
+@media only screen and (min-width: 1000px) {
+
+.break {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 125px;
+}
+
+.footer {
+    margin-top: 125px;
+}
+.phone {
+    display: none; 
+    position: absolute;
+    top: 58%; 
+    left: 34%; 
+    transform: rotate(90deg);
+}
+.border:hover ~ .phone {
+    display: block; 
+}
+.relative {
+    position: relative; 
+}
+
 }
