--- a/code/css/robbiecolborne.css
+++ b/code/css/robbiecolborne.css
@@ -1,37 +1,174 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
+
+/* For Mobile  */
 body {
     background-color: rgb(208, 208, 219);
 }
+selector:pseudo-class {
+    property: value;
+  }
+.topnav {
+    text-align: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 2;
+}
+.topnav :visited{
+    color: blue;
+} 
 
-.flexbox1 {
-    display: flex;
-    justify-content: center;
+.sectionheading {
+   margin-top: 5px;
+}
+
+#wedding {
+    width: 93.3%;
+    border: 10px solid #000000;  
+    margin-top: -10px; 
+}
+#basketball {
+    width: 94%; 
+    border: 10px solid #000000;
+
+}
+.homepage {
+    flex-basis: 50%; 
+}
+
+.font {
+    font-family: 'Squada One', cursive;
+    text-decoration: underline;
+    font-size: 17px; 
+    margin-top: -2px;
+    text-align: center; 
+}
+
+.font2 {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
+    margin-top: -5px; 
+}
+
+.footer {
+    text-align: center;
+    padding-top: 30px;
+
+}
+
+#welcomeheading {
+    font-size: 20px; 
+    font-family: 'Squada One', cursive;
+    border: 8px solid #000000;
+    border-radius: 15px 15px 15px 15px;   
+    margin: 8% 34% 3%;
+    text-align: center;
     position: relative;
 }
-.robbiecolborne {
-    font-size: 42px;
-    margin: 7%;
-    text-align: left;
-    font-family: 'Squada One', cursive;
- 
-}
 
-.robbiecolborne1 {
-    font-size: 42px;
-    margin: 7%;
-    text-align: right;
-    font-family: 'Squada One', cursive;
-  
-}
-
-.middle {
+#codephoto {
     text-align: center;
-    font-size: 30px; 
-    font-family: 'Roboto Mono', monospace;
-  
 }
 
-.texting {
+.sectionheadinglastp {
     text-align: center;
-    font-size: 25px;
     font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
+}
+
+.hide-small {
+    display: none; 
+}
+
+.hide-large {
+    display: initial; 
+}
+
+.hidden {
+    display: initial;
+}
+.hidden1 {
+    display: none;
+}
+/* For Larger Screens   */
+
+@media only screen and (min-width: 600px) {
+
+    .font {
+      font-size: 16px; 
+      padding-top: 20px;
+      padding-bottom: 15px;
+    }
+
+    .font2 {
+        font-size: 14px;
+        padding-top: 10px;
+        padding-bottom: 25px;
+        text-align: center;
+    }
+
+    #welcomeheading {
+        font-size: 35px;
+        margin: 4% 34% 2%;
+    }
+
+    .hide-small {
+        display: initial;
+    }
+
+    .hide-large {
+        display: none;
+    }
+
+    .wedding {
+        width: 94.3%;
+    }
+    .bigflex {
+        text-align: center;
+    }
+
+}
+
+@media only screen and (min-width: 900px) {
+    .font {
+        font-size: 20px;
+        padding-top: 45px; 
+        margin-right: 5px;
+    }
+
+    .font2 {
+        font-size: 18px; 
+        padding-top: 25px; 
+        margin-right: 5px;
+        text-align: left;
+        padding-left: 10px;
+        padding-bottom: 25px; 
+    }
+
+    #wedding {
+        width: 94.5%; 
+    }
+
+    .bigflex {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    #codephoto {
+        width: 50%;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .hidden1 {
+        display: initial;
+    }
+
+
+
 }
