--- a/RobbieColborne_T1A3/src/css/aboutme.css
+++ b/RobbieColborne_T1A3/src/css/aboutme.css
@@ -8,7 +8,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: black;
+    background-color: black;(209, 30, 30);
     color: white;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
